еще какой-то матриал

--- a/IT/Архитектура, паттерны, парадигмы, методологии.md
+++ b/IT/Архитектура, паттерны, парадигмы, методологии.md
@@ -3,3 +3,6 @@
 
 Можно ознакомиться с материалом из doka.guide: https://doka.guide/tools/#arhitektura-i-horoshie-praktiki
 ![[Pasted image 20241201172452.png]]
+
+
+Книга столярова "Парадигмы" http://www.stolyarov.info/books/programming_intro
