еще какой-то матриал

--- a/Math/Материалы.md
+++ b/Math/Материалы.md
@@ -1,2 +1,5 @@
 Изучение математики по практике: Сайт https://brilliant.org 
 
+Ютуб каналы:
+- Один из лучших каналов про математику  https://www.youtube.com/@WildMathing
+- 
