Больше инфы к курсу

--- a/СУБД.md
+++ b/СУБД.md
@@ -5,7 +5,10 @@
 Внутреннее устройство **реляционных субд**, также затрагиваются и не реляционные субд (doc, key/val, graph, columns). Много отсылок к истории для образования понимания того, почему все устроенно именно так, а
  никак иначе.
 
-> Источник на ютуб, поэтому VPN в помощь. В будущем можно выкачать с переводом на ru в виде caption под видео.
+> Курс ведет [Andy Pavlo](https://www.cs.cmu.edu/~pavlo/), чел true мактрахер.
 
-[Ссылка на плейлист](https://youtube.com/playlist?list=PLSE8ODhjZXjYDBpQnSymaectKjxCy6BYq&si=QRwe6L5k-_gUoBaE)
+> Плейлист на ютуб, поэтому VPN в помощь. В будущем можно выкачать с переводом на ru в виде caption под видео.
+
+- [Плейлист курса](https://youtube.com/playlist?list=PLSE8ODhjZXjYDBpQnSymaectKjxCy6BYq&si=QRwe6L5k-_gUoBaE)
+- [Страничка самого курса(мб кому нужно)](https://15445.courses.cs.cmu.edu/fall2024/)
 
